<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ru.test.todolist.customViews.TDSelectableButton
        android:id="@+id/bt_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toStartOf="@id/bt_signin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <ru.test.todolist.customViews.TDSelectableButton
        android:id="@+id/bt_signin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="80dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bt_login"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <ru.test.todolist.customViews.TDInputField
        android:id="@+id/if_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress|textNoSuggestions"
        app:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@id/bt_login"
        app:maxLength="32" />

    <ru.test.todolist.customViews.TDInputField
        android:id="@+id/if_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:inputType="textPassword"
        app:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/if_email"
        app:maxLength="32"
        app:passwordToggleDrawable="@drawable/password_eye" />

    <ru.test.todolist.customViews.TDInputField
        android:id="@+id/if_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        app:hint="@string/confirm_password"
        app:layout_constraintTop_toBottomOf="@id/if_password"
        app:maxLength="32"
        app:passwordToggleDrawable="@drawable/password_eye" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginTop="24dp"
        android:textSize="17dp"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/if_password" />

    <Button
        android:id="@+id/bt_action"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_weight="1"
        android:background="@drawable/gradient"
        android:text="@string/login"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/tv_agreement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal|bottom"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>